--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.oneswap</groupId>
 	<artifactId>oneswap-worker</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.2</version>
 	<name>oneswap-worker</name>
 	<description>OneSwap worker back-end</description>
 	<url/>
